src/main/java/com/example/timski/model/errors/PasswordsDoNotMatch.java
package com.example.timski.model.errors;

public class PasswordsDoNotMatch extends RuntimeException{

    public PasswordsDoNotMatch(){
        super("PasswordDoNotMatch");
    }
}
